MDDS-108 Add JUnits for CommonHelper and ConfigResolution